--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,42 @@
-<!DOCTYPE html>
+<!-- public/index.html -->
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/images/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <title>Two Sleepy People | Official Site</title>
+    <meta
+      name="description"
+      content="Every night, they're married. Every morning, they're strangers. Internet Cinema’s debut—written and directed by Baron Ryan."
+    />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.twosleepypeople.com/" />
+    <meta property="og:site_name" content="Two Sleepy People" />
+    <meta property="og:title" content="Two Sleepy People | Official Site" />
+    <meta
+      property="og:description"
+      content="Every night, they're married. Every morning, they're strangers.. Internet Cinema’s debut—written and directed by Baron Ryan."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/og.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Two Sleepy People | Official Site" />
+    <meta
+      name="twitter:description"
+      content="Every night, they're married. Every morning, they're strangers. Internet Cinema’s debut—written and directed by Baron Ryan."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/og.jpg" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Two Sleepy People</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
