--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <title>Two Sleepy People | Official Site</title>
     <meta
       name="description"
-      content="Every night, they're married. Every morning, they're strangers. Internet Cinema’s debut—written and directed by Baron Ryan."
+      content="Two Sleepy People—an indie romantic dramedy by Baron Ryan, starring Caroline Konstnar. Internet Cinema’s debut from Creator Camp and Camp Studios."
     />
 
     <!-- Open Graph -->
@@ -20,7 +20,7 @@
     <meta property="og:title" content="Two Sleepy People | Official Site" />
     <meta
       property="og:description"
-      content="Every night, they're married. Every morning, they're strangers.. Internet Cinema’s debut—written and directed by Baron Ryan."
+      content="Two Sleepy People—an indie romantic dramedy by Baron Ryan, starring Caroline Konstnar. Internet Cinema’s debut from Creator Camp and Camp Studios."
     />
     <meta property="og:image" content="%PUBLIC_URL%/og.jpg" />
     <meta property="og:image:width" content="1200" />
@@ -31,7 +31,7 @@
     <meta name="twitter:title" content="Two Sleepy People | Official Site" />
     <meta
       name="twitter:description"
-      content="Every night, they're married. Every morning, they're strangers. Internet Cinema’s debut—written and directed by Baron Ryan."
+      content="Two Sleepy People—an indie romantic dramedy by Baron Ryan, starring Caroline Konstnar. Internet Cinema’s debut from Creator Camp and Camp Studios."
     />
     <meta name="twitter:image" content="%PUBLIC_URL%/og.jpg" />
 
