--- a/public/index.html
+++ b/public/index.html
@@ -1,77 +1,93 @@
-<!-- public/index.html -->
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<!doctype html>
+<html lang="en">
   <head>
-<title>Two Sleepy People (2025) – Official Film</title>
-<meta name="description" content="Official site for Two Sleepy People (2025), a feature film by American Baron and Caroline Grossman. Trailer, cast, screenings, and news.">
-<link rel="canonical" href="https://twosleepypeople.com">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<!-- Favicon / PWA -->
-<link rel="icon" href="/images/favicon.ico">
-<link rel="apple-touch-icon" href="/images/logo192.png">
-<link rel="manifest" href="/manifest.json">
+    <!-- Canonical domain: twosleepypeople.com (no www) -->
+    <title>Two Sleepy People (2025) — Official Film</title>
+    <meta name="description" content="Official site for Two Sleepy People (2025), an independent romantic dramedy by writer‑director Baron Ryan, starring Caroline Grossman. Trailer, cast, screenings, and news." />
+    <link rel="canonical" href="https://twosleepypeople.com/" />
 
-<!-- Open Graph -->
-<meta property="og:type" content="video.movie">
-<meta property="og:site_name" content="Two Sleepy People">
-<meta property="og:title" content="Two Sleepy People (2025) – Official Film">
-<meta property="og:description" content="Official site. Trailer, cast, screenings, and news.">
-<meta property="og:url" content="https://twosleepypeople.com/">
-<meta property="og:image" content="https://twosleepypeople.com/images/poster.jpg">
-<meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="630">
-<!-- (Optional but nice) embed the trailer as an OG video -->
-<meta property="og:video" content="https://www.youtube.com/embed/TWpm8baVm9g">
-<meta property="og:video:type" content="text/html">
-<meta property="og:video:width" content="1280">
-<meta property="og:video:height" content="720">
+    <!-- Favicon / PWA -->
+    <link rel="icon" href="/images/favicon.ico" />
+    <link rel="apple-touch-icon" href="/images/logo192.png" />
+    <link rel="manifest" href="/manifest.json" />
 
-<!-- Twitter -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Two Sleepy People (2025) – Official Film">
-<meta name="twitter:description" content="Official site. Trailer, cast, screenings, and news.">
-<meta name="twitter:image" content="https://twosleepypeople.com/images/poster.jpg">
+    <!-- Open Graph -->
+    <meta property="og:type" content="video.movie" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="Two Sleepy People" />
+    <meta property="og:title" content="Two Sleepy People (2025) — Official Film" />
+    <meta property="og:description" content="Official site. Trailer, cast, screenings, and news." />
+    <meta property="og:url" content="https://twosleepypeople.com/" />
+    <meta property="og:image" content="https://twosleepypeople.com/images/poster.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <!-- Optional: trailer as OG video (keeps static image for platforms that don’t render video) -->
+    <meta property="og:video" content="https://www.youtube.com/embed/TWpm8baVm9g" />
+    <meta property="og:video:type" content="text/html" />
+    <meta property="og:video:width" content="1280" />
+    <meta property="og:video:height" content="720" />
 
-<!-- Movie structured data -->
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Movie",
-  "name": "Two Sleepy People",
-  "alternateName": "TSP",
-  "url": "https://twosleepypeople.com",
-  "image": "https://twosleepypeople.com/images/poster.jpg",
-  "description": "2025 feature film by American Baron and Caroline Grossman.",
-  "datePublished": "2025-04-26",
-  "director": {
-    "@type": "Person",
-    "name": "American Baron",
-    "sameAs": ["https://www.instagram.com/americanbaron/"]
-  },
-  "actor": [
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Two Sleepy People (2025) — Official Film" />
+    <meta name="twitter:description" content="Official site. Trailer, cast, screenings, and news." />
+    <meta name="twitter:image" content="https://twosleepypeople.com/images/poster.jpg" />
+
+    <!-- Structured Data: Movie -->
+    <script type="application/ld+json">
     {
-      "@type": "Person",
-      "name": "Caroline Grossman",
-      "sameAs": ["https://www.instagram.com/caroline_konstnar/"]
+      "@context": "https://schema.org",
+      "@type": "Movie",
+      "name": "Two Sleepy People",
+      "url": "https://twosleepypeople.com/",
+      "image": "https://twosleepypeople.com/images/poster.jpg",
+      "description": "Independent romantic dramedy (2025) by Baron Ryan and Caroline Grossman.",
+      "datePublished": "2025-04-26",
+      "genre": ["Romance", "Comedy"],
+      "director": {
+        "@type": "Person",
+        "name": "Baron Ryan"
+      },
+      "actor": [
+        { "@type": "Person", "name": "Baron Ryan" },
+        { "@type": "Person", "name": "Caroline Grossman" }
+      ],
+      "author": [
+        { "@type": "Person", "name": "Baron Ryan" },
+        { "@type": "Person", "name": "Caroline Grossman" }
+      ],
+      "productionCompany": {
+        "@type": "Organization",
+        "name": "Camp Studios",
+        "url": "https://campstudios.com"
+      },
+      "sameAs": [
+        "https://wikidata.org/wiki/Q136433703",
+        "https://www.instagram.com/twosleepymovie/",
+        "https://www.imdb.com/title/tt38565998/",
+        "https://letterboxd.com/film/two-sleepy-people/"
+      ],
+      "identifier": [{
+        "@type": "PropertyValue",
+        "propertyID": "imdb",
+        "value": "tt38565998"
+      }],
+      "trailer": {
+        "@type": "VideoObject",
+        "name": "Two Sleepy People — Official Trailer",
+        "description": "Official trailer for the feature film Two Sleepy People.",
+        "url": "https://www.youtube.com/watch?v=TWpm8baVm9g",
+        "embedUrl": "https://www.youtube.com/embed/TWpm8baVm9g",
+        "thumbnailUrl": "https://img.youtube.com/vi/TWpm8baVm9g/maxresdefault.jpg"
+      }
     }
-  ],
-  "productionCompany": {
-    "@type": "Organization",
-    "name": "Camp Studios",
-    "url": "https://campstudios.com",
-    "sameAs": ["https://www.instagram.com/_campstudios/", "https://creatorcamp.co"]
-  },
-  "sameAs": [
-    "https://wikidata.org/wiki/Q136433703",
-    "https://www.instagram.com/twosleepymovie/"
-  ],
-  "trailer": {
-    "@type": "VideoObject",
-    "name": "Two Sleepy People — Official Trailer",
-    "description": "Official trailer for the feature film Two Sleepy People.",
-    "url": "https://www.youtube.com/watch?v=TWpm8baVm9g",
-    "embedUrl": "https://www.youtube.com/embed/TWpm8baVm9g",
-    "thumbnailUrl": "https://img.youtube.com/vi/TWpm8baVm9g/maxresdefault.jpg"
-  }
-}
-</script>
+    </script>
+  </head>
+  <body>
+    <!-- Your existing page content starts here -->
+    <div id="root"></div>
+  </body>
+</html>
