--- a/public/index.html
+++ b/public/index.html
@@ -76,12 +76,14 @@
         "value": "tt38565998"
       }],
       "trailer": {
-        "@type": "VideoObject",
-        "name": "Two Sleepy People — Official Trailer",
-        "description": "Official trailer for the feature film Two Sleepy People.",
-        "url": "https://www.youtube.com/watch?v=TWpm8baVm9g",
-        "embedUrl": "https://www.youtube.com/embed/TWpm8baVm9g",
-        "thumbnailUrl": "https://img.youtube.com/vi/TWpm8baVm9g/maxresdefault.jpg"
+  "@type": "VideoObject",
+  "name": "Two Sleepy People — Official Trailer",
+  "description": "Official trailer for the feature film Two Sleepy People.",
+  "url": "https://www.youtube.com/watch?v=TWpm8baVm9g",
+  "embedUrl": "https://www.youtube.com/embed/TWpm8baVm9g",
+  "thumbnailUrl": "https://img.youtube.com/vi/TWpm8baVm9g/maxresdefault.jpg",
+  "uploadDate": "2025-09-29"
+}
       }
     }
     </script>
