--- a/public/index.html
+++ b/public/index.html
@@ -1,95 +1,128 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Canonical domain: twosleepypeople.com (no www) -->
-    <title>Two Sleepy People (2025) — Official Film</title>
-    <meta name="description" content="Official site for Two Sleepy People (2025), an independent romantic dramedy by writer‑director Baron Ryan, starring Caroline Grossman. Trailer, cast, screenings, and news." />
-    <link rel="canonical" href="https://twosleepypeople.com/" />
+  <title>Two Sleepy People — Official Trailer (2025)</title>
+  <meta name="description" content="Watch the official trailer for Two Sleepy People (2025), an independent romantic dramedy by writer-director Baron Ryan, starring Caroline Konstnar. See screenings, press, and updates." />
+  <link rel="canonical" href="https://www.twosleepypeople.com/trailer" />
 
-    <!-- Favicon / PWA -->
-    <link rel="icon" href="/images/favicon.ico" />
-    <link rel="apple-touch-icon" href="/images/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
+  <!-- Icons -->
+  <link rel="icon" href="/images/favicon.ico" />
+  <link rel="apple-touch-icon" href="/images/logo192.png" />
 
-    <!-- Open Graph -->
-    <meta property="og:type" content="video.movie" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:site_name" content="Two Sleepy People" />
-    <meta property="og:title" content="Two Sleepy People (2025) — Official Film" />
-    <meta property="og:description" content="Official site. Trailer, cast, screenings, and news." />
-    <meta property="og:url" content="https://twosleepypeople.com/" />
-    <meta property="og:image" content="https://twosleepypeople.com/images/poster.jpg" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <!-- Optional: trailer as OG video (keeps static image for platforms that don’t render video) -->
-    <meta property="og:video" content="https://www.youtube.com/embed/TWpm8baVm9g" />
-    <meta property="og:video:type" content="text/html" />
-    <meta property="og:video:width" content="1280" />
-    <meta property="og:video:height" content="720" />
+  <!-- Open Graph -->
+  <meta property="og:type" content="video.movie" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:site_name" content="Two Sleepy People" />
+  <meta property="og:title" content="Two Sleepy People — Official Trailer (2025)" />
+  <meta property="og:description" content="Official trailer for the feature film Two Sleepy People. Watch now and follow for screenings and news." />
+  <meta property="og:url" content="https://www.twosleepypeople.com/trailer" />
+  <meta property="og:image" content="https://www.twosleepypeople.com/images/poster.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:video" content="https://www.youtube.com/embed/TWpm8baVm9g" />
+  <meta property="og:video:type" content="text/html" />
+  <meta property="og:video:width" content="1280" />
+  <meta property="og:video:height" content="720" />
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Two Sleepy People (2025) — Official Film" />
-    <meta name="twitter:description" content="Official site. Trailer, cast, screenings, and news." />
-    <meta name="twitter:image" content="https://twosleepypeople.com/images/poster.jpg" />
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Two Sleepy People — Official Trailer (2025)" />
+  <meta name="twitter:description" content="Official trailer for the feature film Two Sleepy People. Watch now and follow for screenings and news." />
+  <meta name="twitter:image" content="https://www.twosleepypeople.com/images/poster.jpg" />
 
-    <!-- Structured Data: Movie -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Movie",
-      "name": "Two Sleepy People",
-      "url": "https://twosleepypeople.com/",
-      "image": "https://twosleepypeople.com/images/poster.jpg",
-      "description": "Independent romantic dramedy (2025) by Baron Ryan and Caroline Grossman.",
-      "datePublished": "2025-04-26",
-      "genre": ["Romance", "Comedy"],
-      "director": {
-        "@type": "Person",
-        "name": "Baron Ryan"
-      },
-      "actor": [
-        { "@type": "Person", "name": "Baron Ryan" },
-        { "@type": "Person", "name": "Caroline Grossman" }
-      ],
-      "author": [
-        { "@type": "Person", "name": "Baron Ryan" },
-        { "@type": "Person", "name": "Caroline Grossman" }
-      ],
-      "productionCompany": {
-        "@type": "Organization",
-        "name": "Camp Studios",
-        "url": "https://campstudios.com"
-      },
-      "sameAs": [
-        "https://wikidata.org/wiki/Q136433703",
-        "https://www.instagram.com/twosleepymovie/",
-        "https://www.imdb.com/title/tt38565998/",
-        "https://letterboxd.com/film/two-sleepy-people/"
-      ],
-      "identifier": [{
-        "@type": "PropertyValue",
-        "propertyID": "imdb",
-        "value": "tt38565998"
-      }],
-      "trailer": {
-  "@type": "VideoObject",
-  "name": "Two Sleepy People — Official Trailer",
-  "description": "Official trailer for the feature film Two Sleepy People.",
-  "url": "https://www.youtube.com/watch?v=TWpm8baVm9g",
-  "embedUrl": "https://www.youtube.com/embed/TWpm8baVm9g",
-  "thumbnailUrl": "https://img.youtube.com/vi/TWpm8baVm9g/maxresdefault.jpg",
-  "uploadDate": "2025-09-29"
-}
+  <!-- Schema: WebPage (breadcrumb) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Two Sleepy People — Official Trailer",
+    "url": "https://www.twosleepypeople.com/trailer",
+    "primaryImageOfPage": "https://www.twosleepypeople.com/images/poster.jpg",
+    "breadcrumb": {
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://www.twosleepypeople.com/" },
+        { "@type": "ListItem", "position": 2, "name": "Trailer", "item": "https://www.twosleepypeople.com/trailer" }
+      ]
+    }
+  }
+  </script>
+
+  <!-- Schema: VideoObject -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"VideoObject",
+    "name":"Two Sleepy People — Official Trailer",
+    "description":"Official trailer for the feature film Two Sleepy People.",
+    "uploadDate":"2025-09-29",
+    "thumbnailUrl":"https://img.youtube.com/vi/TWpm8baVm9g/maxresdefault.jpg",
+    "url":"https://www.youtube.com/watch?v=TWpm8baVm9g",
+    "embedUrl":"https://www.youtube.com/embed/TWpm8baVm9g",
+    "inLanguage":"en",
+    "publisher":{
+      "@type":"Organization",
+      "name":"Camp Studios",
+      "logo":{
+        "@type":"ImageObject",
+        "url":"https://www.twosleepypeople.com/images/poster.jpg"
       }
     }
-    </script>
-  </head>
-  <body>
-    <!-- Your existing page content starts here -->
-    <div id="root"></div>
-  </body>
+  }
+  </script>
+
+  <!-- Minimal styling to match a clean, white layout -->
+  <style>
+    :root { color-scheme: light; }
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Helvetica,Arial,sans-serif;margin:0;color:#111;background:#fff;}
+    header,main,footer{max-width:960px;margin:auto;padding:24px}
+    a{color:#0b66ff;text-decoration:none}
+    .muted{color:#555}
+    .video{width:100%;aspect-ratio:16/9;border:0;border-radius:12px;box-shadow:0 6px 24px rgba(0,0,0,.12)}
+    .row{display:grid;gap:16px}
+    @media(min-width:768px){.row{grid-template-columns:2fr 1fr}}
+    .section{margin-top:24px;padding-top:16px;border-top:1px solid #eee}
+  </style>
+</head>
+<body>
+  <header>
+    <a href="/" aria-label="Back to homepage">← Back to Home</a>
+    <h1>Two Sleepy People — Official Trailer</h1>
+    <p class="muted">An independent romantic dramedy by writer-director Baron Ryan, starring Caroline Konstnar.</p>
+  </header>
+
+  <main class="row">
+    <section>
+      <iframe
+        class="video"
+        src="https://www.youtube.com/embed/TWpm8baVm9g"
+        title="Two Sleepy People — Official Trailer"
+        loading="lazy"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
+
+      <div class="section">
+        <h2>About the film</h2>
+        <p><strong>Two Sleepy People</strong> (2025) is a feature film by Baron Ryan and Caroline Konstnar. Follow along for festival screenings, release plans, and press.</p>
+      </div>
+    </section>
+
+    <aside>
+      <h3>Links</h3>
+      <ul>
+        <li><a href="https://www.instagram.com/twosleepymovie/" target="_blank" rel="noopener">Instagram</a></li>
+        <li><a href="https://www.imdb.com/title/tt38565998/" target="_blank" rel="noopener">IMDb</a></li>
+        <li><a href="https://letterboxd.com/film/two-sleepy-people/" target="_blank" rel="noopener">Letterboxd</a></li>
+        <li><a href="https://www.youtube.com/watch?v=TWpm8baVm9g" target="_blank" rel="noopener">Watch on YouTube</a></li>
+      </ul>
+    </aside>
+  </main>
+
+  <footer>
+    <p class="muted">© Two Sleepy People · Produced by <a href="https://campstudios.com" target="_blank" rel="noopener">Camp Studios</a></p>
+  </footer>
+</body>
 </html>
