--- a/public/trailer/index.html
+++ b/public/trailer/index.html
@@ -1,1 +1,128 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <title>Two Sleepy People — Official Trailer (2025)</title>
+  <meta name="description" content="Watch the official trailer for Two Sleepy People (2025), an independent romantic dramedy by writer-director Baron Ryan, starring Caroline Konstnar. See screenings, press, and updates." />
+  <link rel="canonical" href="https://www.twosleepypeople.com/trailer" />
+
+  <!-- Icons -->
+  <link rel="icon" href="/images/favicon.ico" />
+  <link rel="apple-touch-icon" href="/images/logo192.png" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="video.movie" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:site_name" content="Two Sleepy People" />
+  <meta property="og:title" content="Two Sleepy People — Official Trailer (2025)" />
+  <meta property="og:description" content="Official trailer for the feature film Two Sleepy People. Watch now and follow for screenings and news." />
+  <meta property="og:url" content="https://www.twosleepypeople.com/trailer" />
+  <meta property="og:image" content="https://www.twosleepypeople.com/images/poster.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:video" content="https://www.youtube.com/embed/TWpm8baVm9g" />
+  <meta property="og:video:type" content="text/html" />
+  <meta property="og:video:width" content="1280" />
+  <meta property="og:video:height" content="720" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Two Sleepy People — Official Trailer (2025)" />
+  <meta name="twitter:description" content="Official trailer for the feature film Two Sleepy People. Watch now and follow for screenings and news." />
+  <meta name="twitter:image" content="https://www.twosleepypeople.com/images/poster.jpg" />
+
+  <!-- Schema: WebPage (breadcrumb) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Two Sleepy People — Official Trailer",
+    "url": "https://www.twosleepypeople.com/trailer",
+    "primaryImageOfPage": "https://www.twosleepypeople.com/images/poster.jpg",
+    "breadcrumb": {
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://www.twosleepypeople.com/" },
+        { "@type": "ListItem", "position": 2, "name": "Trailer", "item": "https://www.twosleepypeople.com/trailer" }
+      ]
+    }
+  }
+  </script>
+
+  <!-- Schema: VideoObject -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"VideoObject",
+    "name":"Two Sleepy People — Official Trailer",
+    "description":"Official trailer for the feature film Two Sleepy People.",
+    "uploadDate":"2025-09-29",
+    "thumbnailUrl":"https://img.youtube.com/vi/TWpm8baVm9g/maxresdefault.jpg",
+    "url":"https://www.youtube.com/watch?v=TWpm8baVm9g",
+    "embedUrl":"https://www.youtube.com/embed/TWpm8baVm9g",
+    "inLanguage":"en",
+    "publisher":{
+      "@type":"Organization",
+      "name":"Camp Studios",
+      "logo":{
+        "@type":"ImageObject",
+        "url":"https://www.twosleepypeople.com/images/poster.jpg"
+      }
+    }
+  }
+  </script>
+
+  <!-- Minimal styling to match a clean, white layout -->
+  <style>
+    :root { color-scheme: light; }
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Helvetica,Arial,sans-serif;margin:0;color:#111;background:#fff;}
+    header,main,footer{max-width:960px;margin:auto;padding:24px}
+    a{color:#0b66ff;text-decoration:none}
+    .muted{color:#555}
+    .video{width:100%;aspect-ratio:16/9;border:0;border-radius:12px;box-shadow:0 6px 24px rgba(0,0,0,.12)}
+    .row{display:grid;gap:16px}
+    @media(min-width:768px){.row{grid-template-columns:2fr 1fr}}
+    .section{margin-top:24px;padding-top:16px;border-top:1px solid #eee}
+  </style>
+</head>
+<body>
+  <header>
+    <a href="/" aria-label="Back to homepage">← Back to Home</a>
+    <h1>Two Sleepy People — Official Trailer</h1>
+    <p class="muted">An independent romantic dramedy by writer-director Baron Ryan, starring Caroline Konstnar.</p>
+  </header>
+
+  <main class="row">
+    <section>
+      <iframe
+        class="video"
+        src="https://www.youtube.com/embed/TWpm8baVm9g"
+        title="Two Sleepy People — Official Trailer"
+        loading="lazy"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
+
+      <div class="section">
+        <h2>About the film</h2>
+        <p><strong>Two Sleepy People</strong> (2025) is a feature film by Baron Ryan and Caroline Konstnar. Follow along for festival screenings, release plans, and press.</p>
+      </div>
+    </section>
+
+    <aside>
+      <h3>Links</h3>
+      <ul>
+        <li><a href="https://www.instagram.com/twosleepymovie/" target="_blank" rel="noopener">Instagram</a></li>
+        <li><a href="https://www.imdb.com/title/tt38565998/" target="_blank" rel="noopener">IMDb</a></li>
+        <li><a href="https://letterboxd.com/film/two-sleepy-people/" target="_blank" rel="noopener">Letterboxd</a></li>
+        <li><a href="https://www.youtube.com/watch?v=TWpm8baVm9g" target="_blank" rel="noopener">Watch on YouTube</a></li>
+      </ul>
+    </aside>
+  </main>
+
+  <footer>
+    <p class="muted">© Two Sleepy People · Produced by <a href="https://campstudios.com" target="_blank" rel="noopener">Camp Studios</a></p>
+  </footer>
+</body>
+</html>
